# shingetsu-layout

./: .gitignore  2gram_yoon.txt  CNAME  Cargo.toml  LICENSE  README.md  best_layout-ansi-colemak.tsv  best_layout-ansi.tsv  best_layout-karabiner.json  best_layout.json  best_layout_1769223792-ansi-colemak.tsv  best_layout_1769223792-ansi.tsv  best_layout_1769223792-karabiner.json  best_layout_1769223792.json  best_layout_1769223792_analyzer.json  best_layout_1769406356-ansi-colemak.tsv  best_layout_1769406356-ansi.tsv  best_layout_1769406356-karabiner.json  best_layout_1769406356.json  best_layout_1769406356_analyzer.json  best_layout_analyzer.json  corpus_1m.txt  generate_layout_svg.py  generate_romantable.py  index.html  llms.txt  merged_freq.txt  robots.txt  shingetsu-ansi-colemak.tsv  shingetsu-ansi-qwerty.tsv  shingetsu-ansi.tsv  shingetsu-karabiner-qwerty.json  shingetsu-karabiner.json  shingetsu-romantable.txt  shingetsu.json  shingetsu_analyzer.json  sitemap.xml  us_shingetsu.json
results/: shingetsu-ansi-colemak.tsv  shingetsu-ansi-qwerty.tsv  shingetsu-karabiner-qwerty.json  shingetsu_v8.6-ansi-colemak.tsv  shingetsu_v8.6-ansi-qwerty.tsv  shingetsu_v8.6-karabiner-colemak.json  shingetsu_v8.6-karabiner-qwerty.json  shingetsu_v8.6-romaji-colemak.tsv  shingetsu_v8.6-romaji-qwerty.tsv  shingetsu_v8.6_analyzer.json
scripts/: create_corpus.py  create_ngram.py  download_aozora.py  extract_yoon_2gram.py  generate_romaji_table.py  merge_1gram_yoon2gram.py
src/: corpus.rs  evaluation.rs  export.rs  ga.rs  layout.rs  main.rs  tui.rs  tui.rs.bak
(+16 files in other folders)
