[package]
name = "kana_layout_optimizer"
version = "0.1.0"
edition = "2021"
description = "日本語かな配列の遺伝的アルゴリズム最適化ツール"
authors = ["nagamine-git"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Parallel processing
rayon = "1.8"

# Progress indication
indicatif = "0.17"

# CPU core detection
num_cpus = "1.16"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# TTY detection
atty = "0.2"

# Signal handling
ctrlc = "3.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
